--- a/newfolder/index.html
+++ b/newfolder/index.html
@@ -1,1 +1,110 @@
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="n.css"/>
 
+<h1 id="x">nikhil vinay<h1>
+</head>
+<title>hello, my name is nikhil</title>
+<body>
+<h1>NIKHIL</h1>
+<h2 class="y">vill:khmiya</h2>
+<h3 class="y">dis:westc champaran</h3>
+<h4 class="y">state:Bihar</h4>
+<h5 class="y">countary:INDIA</h5>
+<h6>i love my self</h6>
+<p id="m"><span id="s">i love</span> my self</p>
+<p class="p">it is used for writting paragraphs it is used for writting paragraphs it is used for writting paragraphs
+it is used for writting paragraphs it is used for writting paragraphs
+it is used for writting paragraphs it is used for writting paragraphs
+it is used for writting paragraphs it is used for writting paragraphs</p> <br/><hr/>
+ <p class="p" >as much as we want to write</p>
+<hr/>
+<img border="10px" width="30px" height="50px"  alt="my pic2"src="nikhil.jpg"/>
+<img id="i" alt="my pic2"src="nikhil.jpg"/>
+<img border="10px" width="30px" height="50px" alt="my pic1"src="nikhil2.jpg"/>
+<img border="10px" width="30px" height="50px" align=right alt="my pic3"src="nikhil1.jpg"
+<br/>
+<p id="n">jhdkjfgvlj;lk kjdslj</p>
+<h4 class="l">name of freinds</h4>
+<ul style="text-decoration:overline;color:white;" type="square">
+<li>naseer</li>
+<li>anurag</li>
+<li>gautam</li>
+</ul>
+<h4 class="l">collage name</h4>
+<ol type="A">
+<li>nitp</li>
+<li>patna science</li>
+<li>iit kanpur</li>
+</ol>
+<a href="http://youtube.com">click here</a>
+<table border="5px" bordercolor="lightorange" bgcolor="lightpink" background="nikhil.jpg" aling="right" width="300px" cellspacing="0px">
+<tr>
+<th>NAME</th>
+<th>Movies seeing</th>
+<th>Mango eating</th>
+<th>Backchodi karing</th>
+</tr>
+<tr>
+<th>NIKHIL</th>
+<td>yes</td>
+<td>yes</td>
+<td>yes</td>
+</tr>
+<tr>
+<th>ANURAG</th>
+<td>yes</td>
+<td>no</td>
+<td>yes</td>
+</tr>
+<tr>
+<th>NASEER</th>
+<td>yes</td>
+<td>no</td>
+<td>no</td>
+</tr>
+<tr>
+<th colspan="3">over all</th>
+<td>yes</td>
+</tr>
+</table> 
+<table>
+<tr>
+<th>NAME</th>
+<td><input type="text" name="username"/></td>
+</tr>
+<tr>
+<th>PASSWORD</th>
+<td><input type="password" name="password"/></td>
+</tr>
+<tr>
+<th>GENDER</th>
+<td><input type="radio" name="gender"/>M
+    <input type="radio" name="gender"/>F</td>
+</tr>
+<tr>
+<th>COURSE</th>
+<td><input type="checkbox" name="course"/>HTML
+<input type="checkbox" name="course"/>PHP
+<input type="checkbox" name="course"/>MYSQL
+</td>
+</tr>
+<tr>
+<th>CITY</th>
+<td><select>
+   <option>Bhopal</option>
+   <option>Kanpur</option>
+   <option>Delhi</option>
+   <option>Patna</option>
+</td>
+</tr>
+<tr>
+<td colspan="4"><input type="submit"/>
+                <input type="reset"/></td>
+</tr>
+</table>
+<iframe src="http://www.sololearn.com"></iframe>
+<iframe src="http://www.goggle.com"></iframe>
+<iframe src="nikhil(2).html"></iframe>
+<body>
+</htm>
